# api-bancaria

./: .env.example  README.md  bank.db  pyproject.toml
src/: main.py
src/api/routes/: __init__.py  accounts.py  auth.py
src/core/: config.py  security.py
src/db/: session.py
src/dependencies/: auth.py
src/models/: __init__.py  account.py  transaction.py  user.py
src/schemas/: account.py  auth.py  transaction.py  user.py
src/services/: account_service.py  auth_service.py
