[tool.poetry]
name = "bank-api"
version = "0.1.0"
description = "API bancária assíncrona com FastAPI"
authors = ["Roberto Bressanelli <rbressanelli@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = {extras = ["standard"], version = "^0.135.3"}
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.24"
email-validator = "^2.2.0"
bcrypt = "3.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
